force-app/main/default/objects/CC_InterfaceSettings__mdt/CC_InterfaceSettings__mdt.object-meta.xml
<CustomObject>
    <description>Configuración de integraciones</description>
    <label>Configuración interfaz</label>
    <pluralLabel>Configuración interfases</pluralLabel>
</CustomObject>