force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ACTION__c.field-meta.xml
<CustomField>
    <fullName>CC_ACTION__c</fullName>
    <label>ACTION</label>
    <length>25</length>
    <type>Text</type>
</CustomField>