force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_Activa__c.field-meta.xml
<CustomField>
    <fullName>CC_Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interfaz activa</description>
    <inlineHelpText>Interfaz activa</inlineHelpText>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>