force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_AFFECTEDEMAIL__c.field-meta.xml
<CustomField>
    <fullName>CC_AFFECTEDEMAIL__c</fullName>
    <description>Máximo. Mail de la incidencia.</description>
    <inlineHelpText>Máximo. Mail de la incidencia.</inlineHelpText>
    <label>AFFECTEDEMAIL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>