force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_AFFECTEDPHONE__c.field-meta.xml
<CustomField>
    <fullName>CC_AFFECTEDPHONE__c</fullName>
    <description>Máximo. Teléfono de la incidencia.</description>
    <inlineHelpText>Máximo. Teléfono de la incidencia.</inlineHelpText>
    <label>AFFECTEDPHONE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>