force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ALF_CliConf__c.field-meta.xml
<CustomField>
    <fullName>CC_ALF_CliConf__c</fullName>
    <description>Errores que marcarán el cliente confidencial</description>
    <inlineHelpText>Errores que marcarán el cliente confidencial</inlineHelpText>
    <label>Error Confidencial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>