force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_Body__c.field-meta.xml
<CustomField>
    <fullName>CC_Body__c</fullName>
    <description>Cuerpo de la petición a enviar</description>
    <inlineHelpText>Cuerpo de la petición a enviar</inlineHelpText>
    <label>Cuerpo petición</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>