force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_Certificado__c.field-meta.xml
<CustomField>
    <fullName>CC_Certificado__c</fullName>
    <description>Certificado necesario en la integración</description>
    <inlineHelpText>Certificado necesario en la integración</inlineHelpText>
    <label>Certificado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>