force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_CharSet__c.field-meta.xml
<CustomField>
    <fullName>CC_CharSet__c</fullName>
    <description>Charset de la petición</description>
    <inlineHelpText>Charset de la petición</inlineHelpText>
    <label>Charset</label>
    <length>25</length>
    <type>Text</type>
</CustomField>