force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_CliConfiErr__c.field-meta.xml
<CustomField>
    <fullName>CC_CliConfiErr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar el cliente confidencial frente a cualquier error en la integración</description>
    <inlineHelpText>Marcar el cliente confidencial frente a cualquier error en la integración</inlineHelpText>
    <label>Cliente confidencial (todos errores)</label>
    <type>Checkbox</type>
</CustomField>