force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ContentType__c.field-meta.xml
<CustomField>
    <fullName>CC_ContentType__c</fullName>
    <description>Content type de la petición</description>
    <inlineHelpText>Content type de la petición</inlineHelpText>
    <label>Content Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>