force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ConvAmbito__c.field-meta.xml
<CustomField>
    <fullName>CC_ConvAmbito__c</fullName>
    <description>Máximo. Conversión del ámbito.</description>
    <inlineHelpText>Máximo. Conversión del ámbito.</inlineHelpText>
    <label>Conversión ámbito</label>
    <type>TextArea</type>
</CustomField>