force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_DiasRef__c.field-meta.xml
<CustomField>
    <fullName>CC_DiasRef__c</fullName>
    <description>Días entre el último refresco de Alfabético y la llamada a realizar</description>
    <inlineHelpText>Días entre el último refresco de Alfabético y la llamada a realizar</inlineHelpText>
    <label>Días refresco ALF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>