force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>CC_EndPoint__c</fullName>
    <description>End point del servicio</description>
    <inlineHelpText>End point del servicio</inlineHelpText>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>