force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_EXTERNALSYSTEM__c.field-meta.xml
<CustomField>
    <fullName>CC_EXTERNALSYSTEM__c</fullName>
    <description>Máximo. Sistema externo de la incidencia.</description>
    <inlineHelpText>Máximo. Sistema externo de la incidencia.</inlineHelpText>
    <label>EXTERNALSYSTEM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>