force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_HttpRequest__c.field-meta.xml
<CustomField>
    <fullName>CC_HttpRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vía llamada al servicio web</description>
    <inlineHelpText>Vía llamada al servicio web</inlineHelpText>
    <label>HTTPRequest</label>
    <type>Checkbox</type>
</CustomField>