force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ITNESCENARIO__c.field-meta.xml
<CustomField>
    <fullName>CC_ITNESCENARIO__c</fullName>
    <description>Máximo. Escenario de la incidencia.</description>
    <inlineHelpText>Máximo. Escenario de la incidencia.</inlineHelpText>
    <label>ITNESCENARIO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>