force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ITNINCTYPE__c.field-meta.xml
<CustomField>
    <fullName>CC_ITNINCTYPE__c</fullName>
    <description>Máximo. Tipo de la incidencia.</description>
    <inlineHelpText>Máximo. Tipo de la incidencia.</inlineHelpText>
    <label>ITNINCTYPE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>