force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ITNRELEVANTE__c.field-meta.xml
<CustomField>
    <fullName>CC_ITNRELEVANTE__c</fullName>
    <description>Máximo. Indicador de incidencia relevante.</description>
    <inlineHelpText>Máximo. Indicador de incidencia relevante.</inlineHelpText>
    <label>ITNRELEVANTE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>