force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ITNROL__c.field-meta.xml
<CustomField>
    <fullName>CC_ITNROL__c</fullName>
    <description>Máximo. Rol de la persona que crea la incidencia.</description>
    <inlineHelpText>Máximo. Rol de la persona que crea la incidencia.</inlineHelpText>
    <label>ITNROL</label>
    <length>25</length>
    <type>Text</type>
</CustomField>