force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_OCP_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_OCP_Aplicacion__c</fullName>
    <label>OCP: Aplicación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>