force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_OCP_Usuario__c.field-meta.xml
<CustomField>
    <fullName>CC_OCP_Usuario__c</fullName>
    <label>OCP: Usuario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>