force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_ORGID__c.field-meta.xml
<CustomField>
    <fullName>CC_ORGID__c</fullName>
    <description>Máximo. Organización.</description>
    <inlineHelpText>Máximo. Organización.</inlineHelpText>
    <label>ORGID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>