force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_REPORTEDEMAIL__c.field-meta.xml
<CustomField>
    <fullName>CC_REPORTEDEMAIL__c</fullName>
    <description>Máximo. Mail de reporte de la incidencia.</description>
    <inlineHelpText>Máximo. Mail de reporte de la incidencia.</inlineHelpText>
    <label>REPORTEDEMAIL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>