force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_REPORTEDPHONE__c.field-meta.xml
<CustomField>
    <fullName>CC_REPORTEDPHONE__c</fullName>
    <description>Máximo. Teléfono de reporte de la incidencia.</description>
    <inlineHelpText>Máximo. Teléfono de reporte de la incidencia.</inlineHelpText>
    <label>REPORTEDPHONE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>