force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_SITEID__c.field-meta.xml
<CustomField>
    <fullName>CC_SITEID__c</fullName>
    <description>Máximo. Site ID.</description>
    <inlineHelpText>Máximo. Site ID.</inlineHelpText>
    <label>SITEID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>