force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_SoapAction__c.field-meta.xml
<CustomField>
    <fullName>CC_SoapAction__c</fullName>
    <description>SOAP Action de la petición</description>
    <inlineHelpText>SOAP Action de la petición</inlineHelpText>
    <label>SOAP Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>