force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_TimeOut__c.field-meta.xml
<CustomField>
    <fullName>CC_TimeOut__c</fullName>
    <description>Time-out del servicio</description>
    <inlineHelpText>Time-out del servicio</inlineHelpText>
    <label>Time-out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>