force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_TipoPeticion__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoPeticion__c</fullName>
    <description>Tipo de petición del servicio (GET / POST)</description>
    <inlineHelpText>Tipo de petición del servicio (GET / POST)</inlineHelpText>
    <label>Tipo petición</label>
    <length>10</length>
    <type>Text</type>
</CustomField>