force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_TrazaActiva__c.field-meta.xml
<CustomField>
    <fullName>CC_TrazaActiva__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador si se activa la traza de integración</description>
    <inlineHelpText>Indicador si se activa la traza de integración</inlineHelpText>
    <label>Traza Activa</label>
    <type>Checkbox</type>
</CustomField>