force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_TrazaEntrada__c.field-meta.xml
<CustomField>
    <fullName>CC_TrazaEntrada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador si se guarda el mensaje de entrada de la integración</description>
    <inlineHelpText>Indicador si se guarda el mensaje de entrada de la integración</inlineHelpText>
    <label>Traza Entrada</label>
    <type>Checkbox</type>
</CustomField>