force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_TrazaSalida__c.field-meta.xml
<CustomField>
    <fullName>CC_TrazaSalida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador si se guarda el mensaje de respuesta de la integración</description>
    <inlineHelpText>Indicador si se guarda el mensaje de respuesta de la integración</inlineHelpText>
    <label>Traza Salida</label>
    <type>Checkbox</type>
</CustomField>