force-app/main/default/objects/CC_InterfaceSettings__mdt/fields/CC_WORKLOG_LOGTYPE__c.field-meta.xml
<CustomField>
    <fullName>CC_WORKLOG_LOGTYPE__c</fullName>
    <label>WORKLOG_LOGTYPE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>