force-app/main/default/objects/CC_InterfaceSettings__mdt/listViews/CBK_Search.listView-meta.xml
<ListView>
    <fullName>CBK_Search</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CC_Activa__c</columns>
    <columns>CC_Certificado__c</columns>
    <columns>CC_EndPoint__c</columns>
    <columns>CC_ContentType__c</columns>
    <filterScope>Everything</filterScope>
    <label>CBK_Search</label>
    <language>en_US</language>
</ListView>